<?xml version="1.0"?>
<package format="2">
  <name>pioneer</name>
  <version>3.1.1</version>
  <description>The pioneer package</description>
  <maintainer email="crvogt@nps.edu">Carson Vogt</maintainer>
  <license>Apache2</license>
  <author email="crvogt@nps.edu">Carson Vogt</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
  </export>
</package>
